# NewsletterApi

./: .env  Cargo.toml  README.md  configuration.yaml  spec.yaml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  issue_delivery_worker.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/login/: login.html
tests/: health_check.rs
