[package]
name = "newsletter_app"
version = "0.1.0"
authors = ["rexx07"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio = {version = "1.22.0", features = ["macros", "rt-multi-thread"]}
reqwest = "0.11.13"
serde = {version = "1.0.147", features = ["derive"]}
config = {version = "0.11.0", features = ["yaml"]}
uuid = {version = "1.2.2", features = ["v4"]}
chrono = "0.4.15"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.16.0"
secrecy = {version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
tracing-log = "0.1.3"
tracing ={version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.4"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]