[package]
name = "newsletter_app"
version = "0.1.0"
authors = ["rexx07"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = {version = "0.7.2", features = ["redis-rs-tls-session"]}
actix-web = "4.2.1"
actix-web-flash-messages = "0.4.2"
actix-web-lab = "0.18.6"
anyhow = "1.0.66"
argon2 = {version = "0.4.1", features=["std"]}
base64 = "0.13.1"
config = {version = "0.13.3", features = ["yaml"]}
uuid = {version = "1.2.2", features = ["v4"]}
chrono = "0.4.15"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.16.0"
rand = "0.8.5"
reqwest = "0.11.13"
secrecy = {version = "0.8.0", features = ["serde"] }
serde = {version = "1.0.147", features = ["derive"]}
serde-aux = "4.1.2"
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = {version = "1.23.0", features = ["full"]}
tracing ={version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.0"
validator = "0.16.0"
[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]